src/test/ui/privacy/private-method-inherited.stderr
error[E0624]: method `f` is private
  --> $DIR/private-method-inherited.rs:23:7
   |
LL |     x.f();  //~ ERROR method `f` is private
   |       ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
